--- a/src/entries/work/2021-06-vimaan.md
+++ b/src/entries/work/2021-06-vimaan.md
@@ -2,7 +2,7 @@
 title: Software Engineering Intern
 organization: Vimaan
 organizationUrl: https://vimaan.ai/
-location: Singapore / California
+location: Singapore, California
 start: 2021-07-13
 end: 2022-06-17
 ---
